Add the necessary "--add-opens" options to the jvm to be able to run gradle unit tests through intellij.